test/files/neg/t10661.check
t10661.scala:3: error: class type required but A found
  def f[A] = new C with A
                        ^
1 error
